# sandbox-dbt

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: 01_what_is_dbt.md  02_environment_setup.md  03_project_structure.md  04_models_and_materializations.md  05_sources_seeds_freshness.md  06_refs_dag_selection.md  07_testing.md  08_documentation_and_exposures.md  09_jinja_and_macros.md  10_snapshots.md  11_incremental_deep_dive.md  12_packages.md  13_semantic_layer_and_analyses.md  14_hooks_operations_grants.md  15_advanced_config.md  16_state_defer_ci.md  17_debugging_and_performance.md  18_best_practices_and_cheatsheet.md
jaffle_shop/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  selectors.yml
jaffle_shop/analyses/: top_customers.sql
jaffle_shop/macros/: _macros.yml  audit_hooks.sql  cents_to_dollars.sql  drop_old_relations.sql  generate_schema_name.sql  limit_in_dev.sql
jaffle_shop/models/marts/: _marts__docs.md  _marts__exposures.yml  _marts__models.yml  agg_daily_revenue.sql  dim_customers.sql  dim_products.sql  fct_events.sql  (+2 more)
jaffle_shop/seeds/: _seeds.yml  country_codes.csv  payment_methods.csv
jaffle_shop/snapshots/: snapshots.yml
jaffle_shop/tests/: assert_order_payments_reconcile.sql
notebooks/: 01_first_dbt_run.ipynb  02_models_materializations.ipynb  03_sources_seeds_freshness.ipynb  04_testing.ipynb  05_jinja_and_macros.ipynb  06_incremental_models.ipynb  07_snapshots.ipynb  08_artifacts_and_dag.ipynb
scripts/: generate_data.py
(+9 files in other folders)
